--- a/init/homebrew/service.rb.tmpl
+++ b/init/homebrew/service.rb.tmpl
@@ -47,7 +47,7 @@ class {{Class}} < Formula
          <key>ProgramArguments</key>
          <array>
              <string>#{bin}/#{name}</string>
-             <string>-c</string>
+             <string>--config</string>
              <string>#{etc}/#{name}/{{CONFIG_FILE}}</string>
          </array>
          <key>RunAtLoad</key>
