--- a/init/homebrew/tool.rb.tmpl
+++ b/init/homebrew/tool.rb.tmpl
@@ -1,4 +1,5 @@
 # Homebrew Formula Template. Built by Makefile: `make fomula`
+# This file is used when FORMULA is NOT set to 'service'.
 class {{Class}} < Formula
   desc "{{Desc}}"
   homepage "{{URL}}"
