--- a/init/homebrew/service.rb.tmpl
+++ b/init/homebrew/service.rb.tmpl
@@ -1,4 +1,5 @@
 # Homebrew Formula Template. Built by Makefile: `make fomula`
+# This file is only installed if FORMULA is set to 'service'.
 class {{Class}} < Formula
   desc "{{Desc}}"
   homepage "{{URL}}"
