--- a/init/homebrew/tool.rb.tmpl
+++ b/init/homebrew/tool.rb.tmpl
@@ -1,4 +1,6 @@
 # Homebrew Formula Template. Built by Makefile: `make fomula`
+# This is part of Application Builder.
+# https://github.com/golift/application-builder
 # This file is used when FORMULA is NOT set to 'service'.
 class {{Class}} < Formula
   desc "{{Desc}}"
