--- a/init/homebrew/service.rb.tmpl
+++ b/init/homebrew/service.rb.tmpl
@@ -10,17 +10,12 @@ class {{Class}} < Formula
   head "{{URL}}"
 
   depends_on "go" => :build
-  depends_on "dep"
 
   def install
-    ENV["GOPATH"] = buildpath
-
-    bin_path = buildpath/"src/{{IMPORT_PATH}}"
-    # Copy all files from their current location (GOPATH root)
-    # to $GOPATH/src/{{IMPORT_PATH}}
+    bin_path = buildpath/"#{name}"
+    # Copy all files from their current location to buildpath/#{name}
     bin_path.install Dir["*",".??*"]
     cd bin_path do
-      system "dep", "ensure", "--vendor-only"
       system "make", "install", "VERSION=#{version}", "ITERATION={{Iter}}", "PREFIX=#{prefix}", "ETC=#{etc}"
       # If this fails, the user gets a nice big warning about write permissions on their
       # #{var}/log folder. The alternative could be letting the app silently fail
